2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/fatfs_supp.c: Correct types to remove compiler warnings.

2005-06-07  Savin Zlobec  <savin@elatec.si>

	* src/fatfs_supp.c: lseek returned EEOF when at the end of the
	file rather than the current position. 

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/fatfs1.c: Fixed various compiler warnings about types passed to
	diag_printf().

2005-01-18  Savin Zlobec  <savin@elatec.si>

	* src/fatfs_supp.c:
	Fixed FAT12/16 root dir size checking in read_next_raw_dentry - 
	reported by Stephane Royo.

2004-12-13  John Dallaway  <jld@ecoscentric.com>

	* tests/fileio1.c: Rename to fatfs1.c. eCos test names should be
	unique.
	* cdl/fatfs.cdl: Build the renamed test.

2004-11-14  Jani Monoses <jani@iv.ro>

	* test/fileio1.c: Start the test using main, not via a
	thread. This makes is more uniform with the other fileio1 tests.
	
2004-11-11  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c: fixed typos in TRACE statements

2004-10-23  David Brennan  <eCos@brennanhome.com>

	* tests/fileio1.c: fixed check for return value for attribute
	tests.

2004-10-17  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c:
	* src/fatfs_supp.c:
	* include/fatfs.h (NEW):
	* tests/fileio1.c:
	* cdl/fatfs.cdl: Added configurable support for FAT filesystem
	attributes.

2004-10-13  David Brennan  <eCos@brennanhome.com>

	* src/fatfs.c: Added code to setinfo to allow performing a
	file-system sync

2004-10-06  David Brennan  <eCos@brennanhome.com>

	* tests/fileio1.c: Added include of <stdio.h> to fix compiler
	warning for rename().

2004-08-10  Savin Zlobec  <savin@elatec.si>

        * src/fatfs.h:
        * src/fatfs_supp.c:
        Added FAT32 support.

2004-07-13  Savin Zlobec  <savin@elatec.si>

        * cdl/fatfs.cdl:
        * src/fatfs.h:
        * src/fatfs.c:
        * src/fatfs_supp.c:
        * src/fatfs_ncache.c:
        Refactored the code and changed file node cache memory 